[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scr/building.gd" type="Script" id=2]
[ext_resource path="res://flat_icon.png" type="Texture" id=3]
[ext_resource path="res://fonts/basic_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 5 )

[node name="building" type="Area2D"]
z_index = -3
script = ExtResource( 2 )
ruins_texture = ExtResource( 3 )
building_texture = ExtResource( 1 )
resources_to_build = [ 10, 0, 0, 10 ]
building_name = "Test building"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 2

[node name="building_info" type="VBoxContainer" parent="Node2D"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.5
margin_top = -250.0
margin_right = 180.5
margin_bottom = -90.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="building_name" type="Label" parent="Node2D/building_info"]
margin_right = 361.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
text = "Test building"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="Node2D/building_info"]
margin_top = 51.0
margin_right = 361.0
margin_bottom = 181.0

[node name="build_info" type="HBoxContainer" parent="Node2D/building_info/CenterContainer"]
margin_left = 140.0
margin_top = 55.0
margin_right = 221.0
margin_bottom = 75.0

[node name="PanelContainer" type="PanelContainer" parent="Node2D/building_info/CenterContainer/build_info"]
margin_right = 116.0
margin_bottom = 130.0

[node name="build_label" type="Label" parent="Node2D/building_info/CenterContainer/build_info/PanelContainer"]
margin_left = 7.0
margin_top = 52.0
margin_right = 109.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 4 )
text = "Build text"
align = 1
valign = 1

[node name="PanelContainer2" type="PanelContainer" parent="Node2D/building_info/CenterContainer/build_info"]
margin_left = 120.0
margin_right = 246.0
margin_bottom = 130.0

[node name="requirements" type="VBoxContainer" parent="Node2D/building_info/CenterContainer/build_info/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 119.0
margin_bottom = 123.0

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D/building_info/CenterContainer/build_info/PanelContainer2/requirements"]
margin_right = 112.0
margin_bottom = 26.0

[node name="gold_label" type="Label" parent="Node2D/building_info/CenterContainer/build_info/PanelContainer2/requirements/HBoxContainer"]
margin_right = 46.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
text = "Gold:"

[node name="gold_amount" type="Label" parent="Node2D/building_info/CenterContainer/build_info/PanelContainer2/requirements/HBoxContainer"]
margin_left = 50.0
margin_right = 74.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
text = "10"

[node name="HBoxContainer2" type="HBoxContainer" parent="Node2D/building_info/CenterContainer/build_info/PanelContainer2/requirements"]
margin_top = 30.0
margin_right = 112.0
margin_bottom = 56.0

[node name="wood_label" type="Label" parent="Node2D/building_info/CenterContainer/build_info/PanelContainer2/requirements/HBoxContainer2"]
margin_right = 56.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
text = "Wood:"

[node name="wood_amount" type="Label" parent="Node2D/building_info/CenterContainer/build_info/PanelContainer2/requirements/HBoxContainer2"]
margin_left = 60.0
margin_right = 72.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="HBoxContainer3" type="HBoxContainer" parent="Node2D/building_info/CenterContainer/build_info/PanelContainer2/requirements"]
margin_top = 60.0
margin_right = 112.0
margin_bottom = 86.0

[node name="rock_label" type="Label" parent="Node2D/building_info/CenterContainer/build_info/PanelContainer2/requirements/HBoxContainer3"]
margin_right = 48.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
text = "Rock:"

[node name="rock_amount" type="Label" parent="Node2D/building_info/CenterContainer/build_info/PanelContainer2/requirements/HBoxContainer3"]
margin_left = 52.0
margin_right = 64.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="HBoxContainer4" type="HBoxContainer" parent="Node2D/building_info/CenterContainer/build_info/PanelContainer2/requirements"]
margin_top = 90.0
margin_right = 112.0
margin_bottom = 116.0

[node name="leather_label" type="Label" parent="Node2D/building_info/CenterContainer/build_info/PanelContainer2/requirements/HBoxContainer4"]
margin_right = 84.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
text = "Leather:"

[node name="leather_amount" type="Label" parent="Node2D/building_info/CenterContainer/build_info/PanelContainer2/requirements/HBoxContainer4"]
margin_left = 88.0
margin_right = 112.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
text = "10"

[node name="build_button" type="Button" parent="Node2D/building_info/CenterContainer/build_info"]
margin_left = 250.0
margin_top = 55.0
margin_right = 295.0
margin_bottom = 75.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Build"

[node name="action_info" type="HBoxContainer" parent="Node2D/building_info/CenterContainer"]
visible = false
margin_left = 136.0
margin_top = 55.0
margin_right = 225.0
margin_bottom = 75.0

[node name="PanelContainer" type="PanelContainer" parent="Node2D/building_info/CenterContainer/action_info"]
margin_right = 14.0
margin_bottom = 14.0

[node name="action_label" type="Label" parent="Node2D/building_info/CenterContainer/action_info/PanelContainer"]
margin_top = 27.0
margin_right = 228.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 4 )
text = "Action text"

[node name="PanelContainer2" type="PanelContainer" parent="Node2D/building_info/CenterContainer/action_info"]
margin_right = 14.0
margin_bottom = 14.0

[node name="requirements" type="VBoxContainer" parent="Node2D/building_info/CenterContainer/action_info/PanelContainer2"]
margin_left = 145.0
margin_right = 245.0
margin_bottom = 116.0

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D/building_info/CenterContainer/action_info/PanelContainer2/requirements"]
margin_right = 64.0
margin_bottom = 14.0

[node name="gold_label" type="Label" parent="Node2D/building_info/CenterContainer/action_info/PanelContainer2/requirements/HBoxContainer"]
margin_right = 34.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "Gold:"

[node name="gold_amount" type="Label" parent="Node2D/building_info/CenterContainer/action_info/PanelContainer2/requirements/HBoxContainer"]
margin_left = 38.0
margin_right = 46.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="Node2D/building_info/CenterContainer/action_info/PanelContainer2/requirements"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 32.0

[node name="wood_label" type="Label" parent="Node2D/building_info/CenterContainer/action_info/PanelContainer2/requirements/HBoxContainer2"]
margin_right = 41.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "Wood:"

[node name="wood_amount" type="Label" parent="Node2D/building_info/CenterContainer/action_info/PanelContainer2/requirements/HBoxContainer2"]
margin_left = 45.0
margin_right = 53.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="HBoxContainer3" type="HBoxContainer" parent="Node2D/building_info/CenterContainer/action_info/PanelContainer2/requirements"]
margin_top = 36.0
margin_right = 64.0
margin_bottom = 50.0

[node name="rock_label" type="Label" parent="Node2D/building_info/CenterContainer/action_info/PanelContainer2/requirements/HBoxContainer3"]
margin_right = 34.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "Rock:"

[node name="rock_amount" type="Label" parent="Node2D/building_info/CenterContainer/action_info/PanelContainer2/requirements/HBoxContainer3"]
margin_left = 38.0
margin_right = 46.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="HBoxContainer4" type="HBoxContainer" parent="Node2D/building_info/CenterContainer/action_info/PanelContainer2/requirements"]
margin_top = 54.0
margin_right = 64.0
margin_bottom = 68.0

[node name="leather_label" type="Label" parent="Node2D/building_info/CenterContainer/action_info/PanelContainer2/requirements/HBoxContainer4"]
margin_right = 52.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "Leather:"

[node name="leather_amount" type="Label" parent="Node2D/building_info/CenterContainer/action_info/PanelContainer2/requirements/HBoxContainer4"]
margin_left = 56.0
margin_right = 64.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="action_buton" type="Button" parent="Node2D/building_info/CenterContainer/action_info"]
margin_left = 213.0
margin_top = 24.0
margin_right = 266.0
margin_bottom = 44.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Action"
